--- a/02-typescript/01-converter/package.json
+++ b/02-typescript/01-converter/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "04-addition",
+	"name": "cemperatureconverter",
 	"version": "1.0.0",
-	"author": "Matthieu Bovel",
+	"author": "Samuel Kahsay",
 	"private": true,
 	"scripts": {
 		"build": "webpack",
